# multi-agent-inspect

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
multi_agent_inspect/: hello.py  main.py  mmlu.py
multi_agent_inspect/base/: __init__.py  session.py  tables.py
multi_agent_inspect/chat/: api.py  chat.py
multi_agent_inspect/examples/: __init__.py  chain_of_thought.py  debate.py  dynamic_assignment_of_roles.py  quality_diversity.py  reflexion.py  self_consistency_with_chain_of_thought.py  step_back_abstraction.py
