[project]
    authors=[{name="J Rosser", email="jrosseruk@gmail.com"}]
    dependencies=[
        "inspect-ai@git+https://github.com/UKGovernmentBEIS/inspect_ai.git",
        "pyright>=1.1.382",
        "pytest>=8.3.3",
        "ruff>=0.6.8",
        "click>=8.1.7",
        "cookiecutter>=2.6.0",
        "sqlalchemy>=2.0.36",
        "tqdm>=4.67.1",
        "tiktoken>=0.8.0",
        "fastapi>=0.115.6",
        "openai>=1.57.4",
        "icecream>=2.1.3",
        "uvicorn>=0.32.1",
        "datasets>=3.2.0",
]
    description="A multi-agent scaffold for inspect-ai evaluations"
    license={text="None"}
    name="multi_agent_inspect"
    readme="README.md"
    requires-python=">=3.12"
    version="0.1.0"
